preserving whitespace on copy-paste fixes #540

--- a/web/default/print.css
+++ b/web/default/print.css
@@ -8,6 +8,19 @@ a {
 	text-decoration: none;
 }
 
+
+div#src a.l, div#src a.hl {
+    padding: 0;
+}
+
+div#src a.l:after, div#src a.hl:after {
+    content: "\0020";
+}
+
+div#src a.l.selected:after, div#src a.hl.selected:after {
+    content: "";
+}
+
 a:link {
 	color: #2030A2;
 }
